force-app/main/default/objects/Graduate_Research_Examination__c/Graduate_Research_Examination__c.object-meta.xml
<CustomObject>
    <label>Graduate Research Examination</label>
    <nameField>
        <displayFormat>GRE-{00000}</displayFormat>
        <label>Record Title</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Graduate Research Examinations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>