force-app/main/default/objects/Graduate_Research_Examination__c/fields/Final_Amendments_Due__c.field-meta.xml
<CustomField>
    <fullName>Final_Amendments_Due__c</fullName>
    <inlineHelpText>Due date for candidate to have completed any final submission requirements (eg amendments, ATC) or to have re-enrolled if outcome was deferred.</inlineHelpText>
    <label>Final Requirements Due Date</label>
    <type>Date</type>
</CustomField>