force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_8_Week_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>I_RS_8_Week_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Email sent to candidate and cc supervisor giving them an update on the examination progress, usually sent at 8 weeks but sometimes earlier</inlineHelpText>
    <label>Candidate Update Sent</label>
    <type>Checkbox</type>
</CustomField>