force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Academic_Board_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Academic_Board_Date__c</fullName>
    <inlineHelpText>Date of Academic Board where award of degree is submitted to/approved.</inlineHelpText>
    <label>Academic Board Date</label>
    <type>Date</type>
</CustomField>