force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Actual_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Actual_Submission_Date__c</fullName>
    <inlineHelpText>Date candidate submitted their thesis for examination</inlineHelpText>
    <label>Actual Submission Date</label>
    <type>Date</type>
</CustomField>