force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Alternate_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Alternate_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Co-supervisor who has been nominated to act as approver if the principal supervisor is unavailable</inlineHelpText>
    <label>Alternate Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Graduate Research Examinations (Co-Supervisor)</relationshipLabel>
    <relationshipName>Co_Supervisor_Thesis</relationshipName>
    <type>Lookup</type>
</CustomField>