force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Anticipated_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Anticipated_Submission_Date__c</fullName>
    <inlineHelpText>Date candidate indicates on their Notice of Intention to Submit that they expect to submit their thesis</inlineHelpText>
    <label>Anticipated Submission Date</label>
    <type>Date</type>
</CustomField>