force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_AS_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_AS_User__c</fullName>
    <description>Contains related user Id of contact &quot;I_RS_Alternate_Supervisor__c&quot;</description>
    <formula>I_RS_Alternate_Supervisor__r.I_RS_Related_User__c</formula>
    <label>AS User</label>
    <type>Text</type>
</CustomField>