force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_BGR_Approver__c.field-meta.xml
<CustomField>
    <fullName>I_RS_BGR_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Chair of the Board of Graduate Research or delegate who can approve on behalf of the BGR</inlineHelpText>
    <label>BGR Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.I_RS_Related_User__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Graduate Research Examinations (BGR Approver)</relationshipLabel>
    <relationshipName>BGR_Approver_Thesis_del</relationshipName>
    <type>Lookup</type>
</CustomField>