force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_BGR_Recommends_Nancy_Millis_Medal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_BGR_Recommends_Nancy_Millis_Medal__c</fullName>
    <inlineHelpText>A record of the decision by the Board of Graduate Research on whether to award the Nancy Millis Medal.</inlineHelpText>
    <label>BGR Recommends Nancy Millis Medal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>