force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_BGR_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_BGR_User__c</fullName>
    <description>Contains related user of the field &quot;I_RS_Board_of_Graduate_Research__c&quot; contact</description>
    <formula>I_RS_Board_of_Graduate_Research__r.I_RS_Related_User__c</formula>
    <label>BGR User</label>
    <type>Text</type>
</CustomField>