force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Board_of_Graduate_Research__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Board_of_Graduate_Research__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Board of Graduate Research member with delegated responsibility to approve on behalf of the Board, normally the Chair</inlineHelpText>
    <label>Board of Graduate Research</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Graduate Research Examinations (Board of Graduate Research)</relationshipLabel>
    <relationshipName>Board_of_Graduate_Research_Thesis</relationshipName>
    <type>Lookup</type>
</CustomField>