force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Candidate_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Candidate_Email_Address__c</fullName>
    <inlineHelpText>Candidate&apos;s student email address, used for all GRS correspondence</inlineHelpText>
    <label>Candidate Email Address</label>
    <type>Email</type>
</CustomField>