force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Candidate_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Candidate_Full_Name__c</fullName>
    <formula>TEXT (I_RS_Student__r.Salutation) &amp; &apos; &apos; &amp; I_RS_Student__r.FirstName &amp; &apos; &apos; &amp;  I_RS_Student__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Full Name</label>
    <type>Text</type>
</CustomField>