force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_College__c.field-meta.xml
<CustomField>
    <fullName>I_RS_College__c</fullName>
    <inlineHelpText>Candidate&apos;s College, determined from principal supervisor’s research org unit</inlineHelpText>
    <label>College</label>
    <length>255</length>
    <type>Text</type>
</CustomField>