force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Course_Parent__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Course_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Parent</label>
    <referenceTo>CourseParent__c</referenceTo>
    <relationshipLabel>Graduate Research Examinations</relationshipLabel>
    <relationshipName>Graduate_Research_Examinations</relationshipName>
    <type>Lookup</type>
</CustomField>