force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Date_Outcome_Communicated__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Outcome_Communicated__c</fullName>
    <inlineHelpText>Date GRS notified candidate of examination outcome</inlineHelpText>
    <label>Date Outcome Communicated</label>
    <type>Date</type>
</CustomField>