force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Degree__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Degree__c</fullName>
    <label>Degree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>