force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_DGR_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_DGR_User__c</fullName>
    <description>Contains Related user Id of Contact &quot;I_RS_Director_of_Graduate_Research__c&quot;</description>
    <formula>I_RS_Director_of_Graduate_Research__r.I_RS_Related_User__c</formula>
    <label>DGR User</label>
    <type>Text</type>
</CustomField>