force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Director_of_Graduate_Research__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Director_of_Graduate_Research__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Director of Graduate Research for the candidate&apos;s school, unless they have a conflict, in which case will be an alternative, usually the Head of School</inlineHelpText>
    <label>Director of Graduate Research</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Graduate Research Examinations (Director of Graduate Research)</relationshipLabel>
    <relationshipName>Director_of_Graduate_Research_Thesis</relationshipName>
    <type>Lookup</type>
</CustomField>