force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Expected_Work_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Expected_Work_Submission_Date__c</fullName>
    <inlineHelpText>Date candidate is expected to submit their thesis by, as per the Graduate Research Candidature Policy.</inlineHelpText>
    <label>Expected Work Submission Date</label>
    <type>Date</type>
</CustomField>