force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_External_Id__c</fullName>
    <description>External Id set from the external sources</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>