force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Field_of_Research__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Field_of_Research__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Government classification code describing the candidate&apos;s research field. Recorded in SIS and will appear on the transcript.</inlineHelpText>
    <label>Field of Research</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Classification_Master__c.I_RS_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Classification_Master__c.I_RS_Type__c</field>
            <operation>equals</operation>
            <value>Fields of Research (FOR)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Classification_Master__c</referenceTo>
    <relationshipLabel>Graduate Research Examinations</relationshipLabel>
    <relationshipName>Graduate_Research_Examinations</relationshipName>
    <type>Lookup</type>
</CustomField>