force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Field_of_Research_ShortText__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Field_of_Research_ShortText__c</fullName>
    <label>Field of Research</label>
    <type>TextArea</type>
</CustomField>