force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Field_of_Research_Text__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Field_of_Research_Text__c</fullName>
    <description>Stores concatenated FoR Code and Description from HDR Enrolment</description>
    <label>Field of Research</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>