force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_File_Location__c.field-meta.xml
<CustomField>
    <fullName>I_RS_File_Location__c</fullName>
    <inlineHelpText>Link to be provided to the examiners to be able to access the examination materials in the repository</inlineHelpText>
    <label>Link to Examination Material</label>
    <type>Url</type>
</CustomField>