force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_GRS_Notes__c.field-meta.xml
<CustomField>
    <fullName>I_RS_GRS_Notes__c</fullName>
    <inlineHelpText>Visible to GRS staff only.</inlineHelpText>
    <label>GRS Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>