force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_HDR_Enrolment__c.field-meta.xml
<CustomField>
    <fullName>I_RS_HDR_Enrolment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrolment</label>
    <referenceTo>HDR_Enrolment__c</referenceTo>
    <relationshipLabel>Graduate Research Examinations</relationshipLabel>
    <relationshipName>Graduate_Research_Examinations</relationshipName>
    <type>Lookup</type>
</CustomField>