force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_International__c.field-meta.xml
<CustomField>
    <fullName>I_RS_International__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indication of whether candidate is an international student on a student visa.</inlineHelpText>
    <label>International</label>
    <type>Checkbox</type>
</CustomField>