force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Maximum_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Maximum_Completion_Date__c</fullName>
    <inlineHelpText>Date corresponding to candidate&apos;s maximum period of enrolment, usually 2 years for Masters and 4 years for doctoral degrees, as per the Graduate Research Candidature Policy.</inlineHelpText>
    <label>Maximum Completion Date</label>
    <type>Date</type>
</CustomField>