force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Nancy_Millis_BGR_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Nancy_Millis_BGR_Meeting_Date__c</fullName>
    <inlineHelpText>Date of the Board of Graduate Research meeting where the Nancy Millis Medal nomination was reviewed.</inlineHelpText>
    <label>Nancy Millis BGR Meeting Date</label>
    <type>Date</type>
</CustomField>