force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Nancy_Millis_Medal_Ordered__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Nancy_Millis_Medal_Ordered__c</fullName>
    <label>Nancy Millis Medal Ordered</label>
    <type>Date</type>
</CustomField>