force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Nancy_Millis_Medal_Presented__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Nancy_Millis_Medal_Presented__c</fullName>
    <label>Nancy Millis Medal Presented</label>
    <type>Date</type>
</CustomField>