force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_New_Global_Action_Instructions__c.field-meta.xml
<CustomField>
    <fullName>I_RS_New_Global_Action_Instructions__c</fullName>
    <defaultValue>&quot;This will create a new Graduate Research Examination record in your name. From this record, you can:&quot;+BR()+BR()+

&quot;- Track the progress of your examination&quot; +BR()+
&quot;- Submit your examination forms, such as your Notice of Intention to Submit form&quot; +BR()+BR()+

&quot;Supervisors cannot create a Graduate Research Examination record on behalf of their candidate. If your candidate cannot create the record themselves, please contact exams.grs@latrobe.edu.au.&quot; +BR()+BR()</defaultValue>
    <label>New Graduate Research Examination</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>