force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Other_Requirements__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Other_Requirements__c</fullName>
    <inlineHelpText>Used to capture any additional examination requirements e.g. for some joint degrees.</inlineHelpText>
    <label>Other Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>