force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Principal_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Principal_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principal Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Graduate Research Examinations (Principal Supervisor)</relationshipLabel>
    <relationshipName>Principal_Supervisor_Thesis</relationshipName>
    <type>Lookup</type>
</CustomField>