force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Re_Enrolment_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Re_Enrolment_Date__c</fullName>
    <inlineHelpText>A record of the date a candidate re-enrolls to commence 12 month revise and resubmit process for their thesis.</inlineHelpText>
    <label>Re-Enrolment Date</label>
    <type>Date</type>
</CustomField>