force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Record_URL__c</fullName>
    <description>Do not use in email comms - it will reflect the senders URL, not the recipients</description>
    <formula>IF (

$User.I_RS_Is_Researcher_User__c = &quot;1&quot;,

$Setup.URL_Variable__c.I_RS_Researcher_Portal_Base_URL__c + &quot;/detail/&quot; + Id,

$Setup.URL_Variable__c.I_RS_Internal_Base_URL__c + &quot;/&quot; + Id

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record URL</label>
    <type>Text</type>
</CustomField>