force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Repository_Password__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Repository_Password__c</fullName>
    <inlineHelpText>Password given to the examiners to login to the repository to access the candidate&apos;s thesis</inlineHelpText>
    <label>Repository Password</label>
    <length>40</length>
    <type>Text</type>
</CustomField>