force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Repository_User_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Repository_User_Name__c</fullName>
    <inlineHelpText>Username given to the examiners to login to the repository to access the candidate&apos;s thesis</inlineHelpText>
    <label>Repository Login</label>
    <length>80</length>
    <type>Text</type>
</CustomField>