force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Revise_and_Resubmit__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Revise_and_Resubmit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if candidate is submitting a revised thesis for re-examination after a deferred outcome.</inlineHelpText>
    <label>Revise and Resubmit</label>
    <type>Checkbox</type>
</CustomField>