force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Sanctions__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Sanctions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indication of whether the candidate has any outstanding fee sanctions. Any outstanding fees must be paid before a candidate can graduate.</inlineHelpText>
    <label>Fee Sanction</label>
    <type>Checkbox</type>
</CustomField>