force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_SBGR_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SBGR_User__c</fullName>
    <description>Formula field that contains related user Id of &quot;I_RS_Substitute_Board_Graduate_Research__c&quot; Contact</description>
    <formula>I_RS_Substitute_Board_Graduate_Research__r.I_RS_Related_User__c</formula>
    <label>SBGR User</label>
    <type>Text</type>
</CustomField>