force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_SDGR_Approver__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SDGR_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Normally the Director of Graduate Research for the candidate’s school, unless they have a conflict, in which case will usually be the Head of School</inlineHelpText>
    <label>SDGR Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.I_RS_Related_User__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Graduate Research Examinations (SDGR Approver)</relationshipLabel>
    <relationshipName>SDGR_Approver_Thesis</relationshipName>
    <type>Lookup</type>
</CustomField>