force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_SDGR_Approver_User_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SDGR_Approver_User_Id__c</fullName>
    <formula>I_RS_SDGR_Approver__r.I_RS_Related_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDGR Approver User Id</label>
    <type>Text</type>
</CustomField>