force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_SDGR_Recommended_Exam_Outcome__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SDGR_Recommended_Exam_Outcome__c</fullName>
    <inlineHelpText>Final exam outcome recommended by BGR</inlineHelpText>
    <label>Exam Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed - without amendments</fullName>
            </value>
            <value>
                <fullName>Passed - minor amendments</fullName>
            </value>
            <value>
                <fullName>Passed - major amendments</fullName>
            </value>
            <value>
                <fullName>Revise and resubmit</fullName>
            </value>
            <value>
                <fullName>Doctorate not awarded, award Masters</fullName>
            </value>
            <value>
                <fullName>No degree awarded</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
                <isActive>false</isActive>
                <label>Deferred</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>