force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_SDGR_Recommends_Nancy_Millis_Medal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SDGR_Recommends_Nancy_Millis_Medal__c</fullName>
    <inlineHelpText>Indication of whether the School Director of Graduate Research is recommending the candidate for the Nancy Millis medal. For PhD only.</inlineHelpText>
    <label>SDGR Recommends Nancy Millis Medal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>