force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_SDGR_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SDGR_User__c</fullName>
    <description>Contains Related user Id of the contact &quot;I_RS_Substitute_DirectorGraduateResearch__c&quot;</description>
    <formula>I_RS_Substitute_DirectorGraduateResearch__r.I_RS_Related_User__c</formula>
    <label>SDGR User</label>
    <type>Text</type>
</CustomField>