force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Short_Thesis_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Short_Thesis_Title__c</fullName>
    <label>Short Thesis Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>