force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOI to Submit</fullName>
                <default>true</default>
                <label>NOI to Submit</label>
            </value>
            <value>
                <fullName>Authority to Submit</fullName>
            </value>
            <value>
                <fullName>Upload Thesis</fullName>
            </value>
            <value>
                <fullName>Under Examination</fullName>
            </value>
            <value>
                <fullName>Outcome Communicated</fullName>
            </value>
            <value>
                <fullName>Completion Requirements</fullName>
            </value>
            <value>
                <fullName>Awaiting Academic Board Approval</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>