force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Student_Course__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Student_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Course</label>
    <referenceTo>I_ST_Student_Course__c</referenceTo>
    <relationshipLabel>Graduate Research Examinations</relationshipLabel>
    <relationshipName>Graduate_Research_Examinations</relationshipName>
    <type>Lookup</type>
</CustomField>