force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Student_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Student_ID__c</fullName>
    <formula>I_RS_Student__r.I_RS_Student_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student ID</label>
    <type>Text</type>
</CustomField>