force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Student_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Student_User__c</fullName>
    <description>Contains related User Id of &quot;Student&quot;</description>
    <formula>I_RS_Student__r.I_RS_Related_User__c</formula>
    <label>Student User</label>
    <type>Text</type>
</CustomField>