force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Substitute_Board_Graduate_Research__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Substitute_Board_Graduate_Research__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Deputy Chair or other member of the Board of Graduate Research with delegated responsibility for approvals on behalf of the BGR</inlineHelpText>
    <label>Alternate Board of Graduate Research</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Graduate Research Examinations (Substitute Board of Graduate Research)</relationshipLabel>
    <relationshipName>Substitute_Board_Thesis</relationshipName>
    <type>Lookup</type>
</CustomField>