force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Substitute_DirectorGraduateResearch__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Substitute_DirectorGraduateResearch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Nominated delegate who can approve on behalf of the School Director of Graduate Research if they are unavailable, usually the Head of School</inlineHelpText>
    <label>Alternate Director of Graduate Research</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Graduate Research Examinations (Substitute Director of Graduate Research)</relationshipLabel>
    <relationshipName>Substitute_Director_Thesis</relationshipName>
    <type>Lookup</type>
</CustomField>