force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Supervisor_Approver__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Supervisor_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the supervisor acting as the approver for examinations forms, normally the principal supervisor unless unavailable</inlineHelpText>
    <label>Supervisor Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.I_RS_Related_User__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Graduate Research Examinations (Supervisor Approver)</relationshipLabel>
    <relationshipName>Supervisor_Approver_Thesis</relationshipName>
    <type>Lookup</type>
</CustomField>