force-app/main/default/objects/Graduate_Research_Examination__c/fields/I_RS_Thesis_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Thesis_Title__c</fullName>
    <inlineHelpText>Thesis title recorded in SIS</inlineHelpText>
    <label>Thesis Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>