force-app/main/default/objects/Graduate_Research_Examination__c/fields/Masters_Pathways_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Masters_Pathways_Candidate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indication of whether the candidate is a Masters Pathway candidate</inlineHelpText>
    <label>Masters Pathway Candidate</label>
    <type>Checkbox</type>
</CustomField>